button styles in variables, color-error --> color-danger

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1152,6 +1152,7 @@
                 <div class="example">
                     <button class="button button--default" type="button">Default Button</button>
                     <button class="button button--primary" type="button">Primary button</button>
+                    <button class="button button--secondary" type="button">Secondary button</button>
                     <button class="button button--link" type="button">Link button</button>
                     <button class="button button--default is-loading" type="button">Loading button</button>
                 </div>
@@ -1163,10 +1164,15 @@
                 <div class="example">
                     <button class="button button--default" type="button" disabled>Disabled</button>
                     <button class="button button--primary" type="button" disabled>Disabled</button>
+                    <button class="button button--secondary" type="button" disabled>Disabled</button>
+                    <button class="button button--link" type="button" disabled>Link button</button>
                 </div>
                 <div class="example">
                     <button class="button button--default is-active" type="button">Active</button>
                     <button class="button button--primary is-active" type="button">Active</button>
+                    <button class="button button--secondary is-active" type="button">Active</button>
+                    <button class="button button--link is-active" type="button">Link button</button>
+
                 </div>
             </article>
             <article class="buttons__sizes">
@@ -1873,10 +1879,10 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><code>.u-color-error</code>
+                                <td><code>.u-color-danger</code>
                                 </td>
                                 <td>
-                                    <div class="u-color-error">Set text color to "Danger".</div>
+                                    <div class="u-color-danger">Set text color to "Danger".</div>
                                 </td>
                             </tr>
                             <tr>
