--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -374,20 +374,33 @@
             <article class="typography__headings">
                 <header>
                     <h3 class="u-muted">Headings</h3>
+                    <p>Traditional heading elements are designed to work best in the meat of your page content.</p>
                 </header>
                 <div class="example">
-                    <h1>This is heading 1 (h1)</h1>
-                    <h2>This is heading 2 (h2)</h2>
-                    <h3>This is heading 3 (h3)</h3>
-                    <h4>This is heading 4 (h4)</h4>
-                    <h5>This is heading 5 (h5)</h5>
-                    <h6>This is heading 6 (h6)</h6>
-                    <h1 class="h6">This is heading 1 (.h6)</h1>
-                    <h2 class="h5">This is heading 2 (.h5)</h2>
-                    <h3 class="h4">This is heading 3 (.h4)</h3>
-                    <h4 class="h3">This is heading 4 (.h3)</h4>
-                    <h5 class="h2">This is heading 5 (.h2)</h5>
-                    <h6 class="h1">This is heading 6 (.h1)</h6>
+                    <h1>This is heading h1 <code>h1</code></h1>
+                    <h2>This is heading h2 <code>h2</code></h2>
+                    <h3>This is heading h3 <code>h3</code></h3>
+                    <h4>This is heading h4 <code>h4</code></h4>
+                    <h5>This is heading h5 <code>h5</code></h5>
+                    <h6>This is heading h6 <code>h6</code></h6>
+                    <h1 class="h6">This is heading h1 <code>.h6</code></h1>
+                    <h2 class="h5">This is heading h2 <code>.h5</code></h2>
+                    <h3 class="h4">This is heading h3 <code>.h4</code></h3>
+                    <h4 class="h3">This is heading h4 <code>.h3</code></h4>
+                    <h5 class="h2">This is heading h5 <code>.h2</code></h5>
+                    <h6 class="h1">This is heading h6 <code>.h1</code></h6>
+                </div>
+            </article>
+            <article class="typography__displays">
+                <header>
+                    <h3 class="u-muted">Display headings</h3>
+                    <p>Display headings are good way to control UI related headings, i.e. sidebar or section headings.</p>
+                </header>
+                <div class="example">
+                    <h1 class="display-1">Display 1 <code>.display-1</code></h1>
+                    <h2 class="display-2">Display 2 <code>.display-2</code></h2>
+                    <h3 class="display-3">Display 3 <code>.display-3</code></h3>
+                    <h4 class="display-4">Display 4 <code>.display-4</code></h4>
                 </div>
             </article>
             <article class="typography__modularscale">
