--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -377,18 +377,12 @@
                     <p>Traditional heading elements are designed to work best in the meat of your page content.</p>
                 </header>
                 <div class="example">
-                    <h1>This is heading h1 <code>h1</code></h1>
-                    <h2>This is heading h2 <code>h2</code></h2>
-                    <h3>This is heading h3 <code>h3</code></h3>
-                    <h4>This is heading h4 <code>h4</code></h4>
-                    <h5>This is heading h5 <code>h5</code></h5>
-                    <h6>This is heading h6 <code>h6</code></h6>
-                    <h1 class="h6">This is heading h1 <code>.h6</code></h1>
-                    <h2 class="h5">This is heading h2 <code>.h5</code></h2>
-                    <h3 class="h4">This is heading h3 <code>.h4</code></h3>
-                    <h4 class="h3">This is heading h4 <code>.h3</code></h4>
-                    <h5 class="h2">This is heading h5 <code>.h2</code></h5>
-                    <h6 class="h1">This is heading h6 <code>.h1</code></h6>
+                    <h1>h1 – This is heading <code>.h1</code></h1>
+                    <h2>h2 – This is heading <code>.h2</code></h2>
+                    <h3>h3 – This is heading <code>.h3</code></h3>
+                    <h4>h4 – This is heading <code>.h4</code></h4>
+                    <h5>h5 – This is heading <code>.h5</code></h5>
+                    <h6>h6 – This is heading <code>.h6</code></h6>
                 </div>
             </article>
             <article class="typography__displays">
