--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -181,15 +181,14 @@
             margin-bottom: 1.5rem;
             position: relative;
         }
+
         .docs-content .example-icon {
             margin-bottom: 1rem;
         }
 
-
         .docs-content .example-icons .icon-name {
             padding-left: 4px;
         }
-
 
         .docs-content.glyph-codepoint {
             font-size: .75em;
@@ -1040,6 +1039,48 @@
                 </div>
                 <div class="example container"><pre><code>&lt;table class=&quot;table table--striped&quot;&gt;...&lt;/table&gt;</code></pre></div>
                 <header class="container">
+                    <h3 class="display-3">Bordered table <code>.table--bordered</code></h3>
+                </header>
+                <div class="example container">
+                    <table class="table table--bordered">
+                        <caption>
+                            Optional table caption
+                        </caption>
+                        <thead>
+                            <tr>
+                                <th scope="column">Heading 1</th>
+                                <th scope="column">Heading 2</th>
+                                <th scope="column">Heading 3</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <td>Footer 1</td>
+                                <td>Footer 2</td>
+                                <td>Footer 3</td>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                            <tr>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                                <td>Table cell</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="example container"><pre><code>&lt;table class=&quot;table table--bordered&quot;&gt;...&lt;/table&gt;</code></pre></div>
+                <header class="container">
                     <h3 class="display-3">Highligted table <code>.table--highlight</code></h3>
                 </header>
                 <div class="example container">
@@ -1883,7 +1924,7 @@
                     <% _.each(glyphs, function(glyph) { %>
                         <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-3of12 u-width-xl-2of12 u-text-center">
                             <div class="example-icon">
-                            <i class="<%= className %> <%= className %>-<%= glyph.name %>"></i><span class="icon-name"><%= glyph.name %></span>
+                                <i class="<%= className %> <%= className %>-<%= glyph.name %>"></i><span class="icon-name"><%= glyph.name %></span>
                             </div>
                             <code>.<%= className %>-<%= glyph.name %></code>
                         </li>
@@ -2201,7 +2242,7 @@
             <article>
                 <div class="container">
                     <div class="table-responsive">
-                        <table class="table table--border table--border-cells table--stripes">
+                        <table class="table">
                             <caption class="u-hide">List of utility classes</caption>
                             <thead>
                                 <tr>
