--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
 
     <!-- @if ENV='development' -->
     <link rel="stylesheet" href="styles/style.css">
@@ -52,7 +54,8 @@
         </nav>
     </header>
 
-    <main id="content" class="content" role="main">
+    <main id="main" class="main" role="main">
+
     </main>
 
     <footer id="footer" class="footer" role="contentinfo">
