--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1981,7 +1981,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
                         <code>.icon</code>
@@ -1991,7 +1991,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon icon--small">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
                         <code>.icon icon--small</code>
@@ -2000,7 +2000,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon icon--medium">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
                         <code>.icon icon--medium</code>
@@ -2009,7 +2009,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon icon--large">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
                         <code>.icon icon--large</code>
@@ -2018,7 +2018,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon icon--huge">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
                         <code>.icon icon--huge</code>
@@ -2029,7 +2029,7 @@
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
                             <svg class="icon icon--align-to-text">
-                                <use xlink:href="../images/sprite.svg#mark"></use>
+                                <use xlink:href="../images/icons.svg#mark"></use>
                             </svg> Icon align to text
                         </div>
                         <code>.icon icon--align-to-text</code>
@@ -2037,7 +2037,7 @@
                 </ul>
             </article>
             <div class="example container"><pre><code>&lt;svg class="icon"&gt;
-    &lt;use xlink:href="../images/sprite.svg#mark"&gt;&lt;/use&gt;
+    &lt;use xlink:href="../images/icons.svg#mark"&gt;&lt;/use&gt;
 &lt;/svg&gt;</code></pre></div>
 
         </section>
