Change aspect-ratio, add animation modifiers, update package

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
                 <li class="nav__item">
                     <a href="http://www.rae.fi" class="nav__link">RAE Framework</a>
                     <ul class="nav__list nav__list--dropdown">
-                        <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
+                        <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
                         </li>
-                        <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
+                        <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
                         </li>
                     </ul>
                 </li>
