--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -891,7 +891,7 @@
                 </header>
                 <div class="example container">
                     <div class="media media--16-9 is-loading">
-                        <iframe src="xhttp://player.vimeo.com/video/54690885?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" allowfullscreen></iframe>
+                        <iframe src="http://player.vimeo.com/video/54690885?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="example container"><pre><code>&lt;div class=&quot;media media--16-9&quot;&gt;
