--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -411,7 +411,7 @@
                             <div class="grid__column u-width-xs-auto"><span class="example-column"></span></div>
                             <div class="grid__column u-width-xs-auto"><span class="example-column"></span></div>
                         </div>
-                        <div class="grid grid--collapse">
+                        <div class="grid grid--flush">
                             <div class="grid__column u-width-xs-auto"><span class="example-column"></span></div>
                             <div class="grid__column u-width-xs-auto"><span class="example-column"></span></div>
                         </div>
@@ -422,25 +422,9 @@
 
 &lt;div class=&quot;grid grid--quarter&quot;&gt;...&lt;/div&gt;
 
-&lt;div class=&quot;grid grid--collapse&quot;&gt;...&lt;/div&gt;</code></pre>
+&lt;div class=&quot;grid grid--flush&quot;&gt;...&lt;/div&gt;</code></pre>
                 </div>
 
-                <header class="container">
-                    <h4 class="display-4">Centered grid <code>.grid--centered</code></h4>
-                </header>
-                <div class="example">
-                    <div class="container">
-                        <div class="grid grid--centered">
-                            <div class="grid__column u-width-xs-3of12"><span class="example-column"></span></div>
-                            <div class="grid__column u-width-xs-3of12"><span class="example-column"></span></div>
-                            <div class="grid__column u-width-xs-2of12"><span class="example-column"></span></div>
-                            <div class="grid__column u-width-xs-2of12"><span class="example-column"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="example container">
-                    <pre><code>&lt;div class=&quot;grid grid--centered&quot;&gt;...&lt;/div&gt;</code></pre>
-                </div>
                 <header class="container">
                     <h4 class="display-4">Equal height <code>.grid--equal-height</code></h4>
                 </header>
