margins and paddings

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -2734,17 +2734,17 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><code>.u-center</code>
+                                    <td><code>.u-centered</code>
                                     </td>
                                     <td>
                                         Makes element center using .center(); mixin
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><code>.u-center-block</code>
+                                    <td><code>.u-margin-centered</code>
                                     </td>
                                     <td>
-                                        Makes element center block using .center-block(); mixin
+                                        Centers element horizontally if it has display: block.
                                     </td>
                                 </tr>
                                 <tr>
@@ -2783,7 +2783,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><code>.u-prevent-scroll</code>
+                                    <td><code>.u-noscroll</code>
                                     </td>
                                     <td>
                                         Prevent container from scrolling.
@@ -2830,7 +2830,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><code>.center-block();</code>
+                                    <td><code>.margin-centered();</code>
                                     </td>
                                     <td>Center an element with left/right margin: auto; and display: block;
 
